cmake_minimum_required(VERSION 3.16)
project(leetcode_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(leetcode_cpp main.cpp src/P42.cpp src/LCS01.cpp src/LCS02.cpp src/P1600.cpp src/P1903.cpp src/P1904.cpp src/P1905.cpp src/P1906.cpp src/P1866.cpp src/P1872.cpp src/P1702.cpp src/P1824.cpp src/P1162.cpp src/P1593.cpp src/P1750.cpp src/P84.cpp src/P41.cpp src/P126.cpp src/P1292.cpp src/P549.cpp src/P624.cpp src/P149.cpp src/P855.cpp src/P870.cpp src/P853.cpp src/P687.cpp src/P85.cpp src/P752.cpp src/P127.cpp src/P773.cpp src/Interview_17.23.cpp src/Interview_17.21.cpp src/P1909.cpp src/P1910.cpp src/P1911.cpp)